--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -191,9 +191,9 @@
             to tech, automotive, sports, or gaming, I’d be happy to talk.
           </p>
           <ul class="contact-list">
-            <li><strong>Email:</strong> <a href="mailto:youremail@example.com">youremail@example.com</a></li>
-            <li><strong>GitHub:</strong> <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></li>
-            <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yourusername" target="_blank">linkedin.com/in/yourusername</a></li>
+            <li><strong>Email:</strong> <a href="mailto:jeanca.benc@gmail.com">jeanca.benc@gmail.com</a></li>
+            <li><strong>GitHub:</strong> <a href="https://github.com/jeancabenc" target="_blank">https://github.com/jeancabenc</a></li>
+            <li><strong>LinkedIn:</strong> <a href="www.linkedin.com/in/jean-carlos-bencosme-6233b9306" target="_blank">www.linkedin.com/in/jean-carlos-bencosme-6233b9306</a></li>
             <li><strong>Location:</strong> Harrisburg, PA · open to remote</li>
           </ul>
         </div>
