--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <li>Card layout that adapts to mobile and desktop.</li>
             </ul>
             <footer class="project-links">
-              <a href="C:\Users\Jean Carlos Bencosme\Documents\portfolio_final_corrected\fights-hub\index.html" class="text-link" target="_blank">Open project</a>
+              <a href="fights-hub/" class="text-link" target="_blank">Open project</a>
             </footer>
           </article>
 
@@ -91,7 +91,7 @@
               <li>Automotive-inspired color palette and typography.</li>
             </ul>
             <footer class="project-links">
-              <a href="C:\Users\Jean Carlos Bencosme\Documents\portfolio_final_corrected\autocustomz\index.html" class="text-link" target="_blank">Open project</a>
+              <a href="autocustomz/" class="text-link" target="_blank">Open project</a>
             </footer>
           </article>
 
@@ -109,7 +109,7 @@
               <li>Uses localStorage to persist the demo balance.</li>
             </ul>
             <footer class="project-links">
-              <a href="C:\Users\Jean Carlos Bencosme\Documents\portfolio_final_corrected\fivem-atm-system\index.html" class="text-link" target="_blank">Open project</a>
+              <a href="fivem-atm-system/" class="text-link" target="_blank">Open project</a>
             </footer>
           </article>
 
@@ -127,7 +127,7 @@
               <li>Responsive grid layout for cards.</li>
             </ul>
             <footer class="project-links">
-              <a href="C:\Users\Jean Carlos Bencosme\Documents\portfolio_final_corrected\stats-dashboard\index.html" class="text-link" target="_blank">Open project</a>
+              <a href="stats-dashboard/" class="text-link" target="_blank">Open project</a>
             </footer>
           </article>
 
