--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <li>Clean, minimal layout focused on usability.</li>
             </ul>
             <footer class="project-links">
-              <a href="../mytech-tools/index.html" class="text-link" target="_blank">Open project</a>
+              <a href="mytech-tools/" class="text-link" target="_blank">Open project</a>
             </footer>
           </article>
         </div>
