--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <h3 class="about-subtitle">What I enjoy</h3>
           <ul class="about-list">
             <li><strong>Cars:</strong> Subaru BRZ owner, LED lighting projects, 3000GT restoration.</li>
-            <li><strong>Football:</strong> Following Champions League and Premier League.</li>
+            <li><strong>Soccer:</strong> Following Champions League and Premier League.</li>
             <li><strong>Combat sports:</strong> Boxing and UFC — FightsHub started as a way to track events.</li>
             <li><strong>Gaming/dev:</strong> Scripts for roleplay servers and small experiments.</li>
           </ul>
