Fix LinkedIn URL in contact list

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           <ul class="contact-list">
             <li><strong>Email:</strong> <a href="mailto:jeanca.benc@gmail.com">jeanca.benc@gmail.com</a></li>
             <li><strong>GitHub:</strong> <a href="https://github.com/jeancabenc" target="_blank">https://github.com/jeancabenc</a></li>
-            <li><strong>LinkedIn:</strong> <a href="linkedin.com/in/jean-carlos-bencosme" target="_blank">www.linkedin.com/in/jean-carlos-bencosme</a></li>
+            <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/jean-carlos-bencosme/" target="_blank">www.linkedin.com/in/jean-carlos-bencosme</a></li>
             <li><strong>Location:</strong> Harrisburg, PA · open to remote</li>
           </ul>
         </div>
